--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
+
 <html>
+    <head>
+        <link rel="stylesheet" href="index.css">
+        <title>lesson -unseen</title>
+        <style>
+            ol {
+                background-color: rgb(107, 95, 117);
+            }
+            li {
+                color: indigo;
+            }
+            h3 {
+                color: yellowgreen
+            }
+        </style>
+    </head>
     <body>
-        <p>bootstrapgit commit</p>
-        <h1>html change</h1>
-    </body>
-</html>
+        <header>html lesson</header>
+        <nav>
+                <a href="index.html">Home</a>
+                <a href="form.html">Form</a>
+                <a href="contact.html">contact</a>
+                 <a href="about.html">about</a>
+            </nav>
+            <h1 style="color: green; background-color: black;">MAIN HEADING</h1>
+
+    <h2>sub heading</h2>
+
+    <h3>Programming languages</h3>
+    <ul>
+        <li>c#</li>
+        <li id="program-python">Python</li>
+        <li>Javascript</li>
+        <li>Javas</li>
+    </ul>
+
+    <h3>Steps to learning frontend</h3>
+    <ol>
+         <li class="frontend-contents">HTML</li>
+         <li>CSS</li>
+         <li>Javascript</li>
+         <li class="frontend-contents">Web framework</li>
+    </ol>
+
+    <table>
+        <thead>
+            <tr>
+                <th>High Level Languages</th>
+                <th>Low Level Languages</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+         
